Update before DNS change

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,3 +13,15 @@
   </ul>
 {% endfor %}
 -->
+
+<!-- Sign up for my free newsletter: <a href="https://www.getrevue.co/profile/busse">Busse's Weekly Retrospective</a>-->
+
+
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Subscribe to<em>Busse's Weekly Retrospective</em></h5>
+    <h6 class="card-subtitle mb-2 text-muted">📰 Free email newsletter</h6>
+    <p class="card-text">A weekly digest of interesting things that have crossed my desk in the past week. 🎯 3x items in each category of People, Business, Technology, Inputs, Outputs, Radar, CTAs, and Misc.</p>
+    <a href="https://www.getrevue.co/profile/busse" class="card-link">Subscribe</a>
+  </div>
+</div>
