--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,11 +23,13 @@
         </div>
       </li>
     -->
+    <!--
       <li class="nav-item">
         <a class="nav-link" href="/now">Now</a>
       </li>
+    -->
       <li class="nav-item">
-        <a class="nav-link" href="/contact">Contact / Elsewhere</a>
+        <a class="nav-link" href="/contact">Contact</a>
       </li>
       <!--
       <li class="nav-item">
